// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddForm tests should disable fields when submitting 1`] = `
<Fragment>
  <form>
    <Panel.LEGACY.Section>
      <Stack>
        <Field
          component={[Function]}
          label="Email Address"
          name="recipient"
          required={true}
          validate={
            Array [
              [Function],
              [Function],
            ]
          }
        />
        <Field
          component={[Function]}
          disabled={true}
          helpText="Leaving this field blank will add the suppressions to the primary account."
          name="subaccount"
        />
        <Checkbox.Group
          label="Type"
          required={true}
        >
          <Field
            component={[Function]}
            label="Transactional"
            name="types.transactional"
            type="checkbox"
          />
          <Field
            component={[Function]}
            label="Non-Transactional"
            name="types.non_transactional"
            type="checkbox"
            validate={[Function]}
          />
        </Checkbox.Group>
        <Field
          component={[Function]}
          label="Description"
          name="description"
        />
      </Stack>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Button
        disabled={true}
        type="submit"
        variant="primary"
      >
        Add / Update
      </Button>
    </Panel.LEGACY.Section>
  </form>
</Fragment>
`;

exports[`AddForm tests should make form submitable when dirty and not submitting 1`] = `
<Fragment>
  <form>
    <Panel.LEGACY.Section>
      <Stack>
        <Field
          component={[Function]}
          label="Email Address"
          name="recipient"
          required={true}
          validate={
            Array [
              [Function],
              [Function],
            ]
          }
        />
        <Field
          component={[Function]}
          disabled={false}
          helpText="Leaving this field blank will add the suppressions to the primary account."
          name="subaccount"
        />
        <Checkbox.Group
          label="Type"
          required={true}
        >
          <Field
            component={[Function]}
            label="Transactional"
            name="types.transactional"
            type="checkbox"
          />
          <Field
            component={[Function]}
            label="Non-Transactional"
            name="types.non_transactional"
            type="checkbox"
            validate={[Function]}
          />
        </Checkbox.Group>
        <Field
          component={[Function]}
          label="Description"
          name="description"
        />
      </Stack>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Button
        disabled={false}
        type="submit"
        variant="primary"
      >
        Add / Update
      </Button>
    </Panel.LEGACY.Section>
  </form>
</Fragment>
`;

exports[`AddForm tests should render add form 1`] = `
<Fragment>
  <form>
    <Panel.LEGACY.Section>
      <Stack>
        <Field
          component={[Function]}
          label="Email Address"
          name="recipient"
          required={true}
          validate={
            Array [
              [Function],
              [Function],
            ]
          }
        />
        <Field
          component={[Function]}
          disabled={false}
          helpText="Leaving this field blank will add the suppressions to the primary account."
          name="subaccount"
        />
        <Checkbox.Group
          label="Type"
          required={true}
        >
          <Field
            component={[Function]}
            label="Transactional"
            name="types.transactional"
            type="checkbox"
          />
          <Field
            component={[Function]}
            label="Non-Transactional"
            name="types.non_transactional"
            type="checkbox"
            validate={[Function]}
          />
        </Checkbox.Group>
        <Field
          component={[Function]}
          label="Description"
          name="description"
        />
      </Stack>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Button
        disabled={true}
        type="submit"
        variant="primary"
      >
        Add / Update
      </Button>
    </Panel.LEGACY.Section>
  </form>
</Fragment>
`;
